chore: jshell sample